# tracketch

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
calibration/: README.md  __init__.py  benchmark_bragg_corrections.py  calibration_data.py  helpers.py  lib_optimiser.py  plotting.py  run_Vd_calibration.py
calibration/data/: doerschel-angle.csv  doerschel-data.csv  track_length_df.csv
docs/: Makefile  algorithms.rst  conf.py  examples.rst  getting_started.rst  index.rst
docs/_static/: theme_overrides.css
docs/_templates/: footer.html
docs/api/: etching.rst  index.rst  physics.rst  simulation.rst  stopping_power.rst  tracketch.rst  wavefront.rst
examples/: MWE.py  logging_example.py  plot_LET_CSDA.py  plot_RDD.py  plot_arrival_times.py  plot_custom_grid.py  plot_debris_comparison.py  plot_deuteron_etching.py  plot_etch_rate_function.py  plot_hydrogen_isotopes_radii.py  plot_track_shapes.py  plot_track_shapes_vs_data.py
tests/etching/: test_etch_rate_model.py
tests/ions/: test_LET.py  test_energy_conversion.py  test_hydrogen_ions.py  test_physics.py  test_source_comparison.py
tests/libamtrack/: RDD_Cucinotta_12C.csv  test_libamtrack_RDD.py
tests/simulation/: test_simulator.py  test_simulator_core.py
tests/wavefront/: test_arrival_time.py
tracketch/: __init__.py  utils.py
tracketch/config/: cfg_etching_models.yaml  cfg_libamtrack.yaml  cfg_material_data.yaml
tracketch/etching/: __init__.py  etch_rate_model.py  etch_rate_model_io.py
tracketch/physics/: __init__.py  libamtrack.py  utils_ions.py
(+45 files in other folders)
